Arrows carousel alignment fixed
The arrows now will consistently show up next to the videos no matter the screen size. With this, now the website is fully responsive without any out of place aspects in any screen size

--- a/css/styles.css
+++ b/css/styles.css
@@ -11053,7 +11053,7 @@ button{
 #interests-image{
   height: auto;
   border-style: solid;
-  border-color: rgb(179, 27, 7);
+  border-color: black;
 }
 
 #interests{
@@ -11078,4 +11078,9 @@ button{
   #interests-image{
     width: 100%;
   }
+}
+
+#carouselButtons{
+  position: relative;
+  margin-top: 25%;
 }
